# telecom-system

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: clientapp.h  datagenerationscheduler.h  datagenerator.h  datavalidator.h  deviceemulator.h  messagefactory.h  tcpclient.h
client/src/: datagenerationscheduler.cpp  datagenerator.cpp  datavalidator.cpp  deviceemulator.cpp  main.cpp  messagefactory.cpp  tcpclient.cpp
include/: clientapp.h  datagenerator.h  messagefactory.h  protocol.h
server/: CMakeLists.txt
server/forms/: configlimitsdialog.ui  mainwindow.ui
server/include/: apptypes.h  configlimitsdialog.h  mainwindow.h  servercontroller.h  tcpserver.h  tcpservercontroller.h  tcpservermanager.h  types.h
server/src/: configlimitsdialog.cpp  main.cpp  mainwindow.cpp  servercontroller.cpp  tcpserver.cpp  tcpservercontroller.cpp  tcpservermanager.cpp
shared/: CMakeLists.txt
shared/include/: protocol.h  sharedtypes.h  types.h
shared/src/: protocol.cpp
src/: clientapp.cpp  datagenerator.cpp  main.cpp  protocol.cpp
